--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.5",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
