--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.0",
     "postcss": "^8.5.5",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
