--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.17"
