--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest --watch",
+    "test:gem-collector": "vitest --run src/__tests__/**/*gem-collector*"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -25,10 +30,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "gsap": "^3.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.0",
+    "phaser": "^3.90.0",
     "postcss": "^8.5.5",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
@@ -43,12 +50,21 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.1.1",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "typescript": "5.8.3"
+    "jsdom": "^23.0.1",
+    "node-mocks-http": "^1.13.0",
+    "typescript": "5.8.3",
+    "vitest": "^1.0.4"
   }
 }
