--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "next": "15.2.0",
     "phaser": "^3.90.0",
     "postcss": "^8.5.5",
-    "react": "^19.0.0",
+    "react": "^18.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.0.0",
     "remark-gfm": "^4.0.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
@@ -55,8 +56,8 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.1.1",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
