--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
     "@stripe/stripe-js": "^7.3.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-blockquote": "^2.22.3",
+    "@tiptap/extension-bullet-list": "^2.22.3",
+    "@tiptap/extension-code-block": "^2.22.3",
+    "@tiptap/extension-image": "^2.22.3",
+    "@tiptap/extension-link": "^2.22.3",
+    "@tiptap/extension-list-item": "^2.22.3",
+    "@tiptap/extension-ordered-list": "^2.22.3",
+    "@tiptap/extension-text-align": "^2.22.3",
+    "@tiptap/react": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
     "@types/canvas-confetti": "^1.9.0",
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
@@ -43,6 +54,7 @@
     "react-dom": "^18.3.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "reading-time": "^1.5.0",
     "recharts": "^3.0.0",
     "remark-gfm": "^4.0.1",
     "stripe": "^17.7.0",
