--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "openai": "^5.9.0",
     "puppeteer": "^21.11.0",
     "react": "^18",
     "react-dom": "^18",
+    "reading-time": "^1.5.0",
     "stripe": "^14.15.0",
     "tailwind-merge": "^3.3.1"
   },
