--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
@@ -24,7 +25,9 @@
     "openai": "^5.9.0",
     "puppeteer": "^21.11.0",
     "react": "^18",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "reading-time": "^1.5.0",
     "stripe": "^14.15.0",
     "tailwind-merge": "^3.3.1"
