--- a/package.json
+++ b/package.json
@@ -11,24 +11,38 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-image": "^3.0.3",
+    "@tiptap/extension-text-align": "^3.0.3",
+    "@tiptap/react": "^3.0.3",
+    "@tiptap/starter-kit": "^3.0.3",
+    "@types/pdfkit": "^0.17.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "openai": "^5.9.0",
-    "puppeteer": "^21.11.0",
+    "pdfkit": "^0.17.1",
+    "phaser": "^3.90.0",
     "react": "^18",
     "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "reading-time": "^1.5.0",
+    "recharts": "^3.1.0",
     "stripe": "^14.15.0",
     "tailwind-merge": "^3.3.1"
   },
