--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@stripe/stripe-js": "^2.4.0",
-    "@supabase/ssr": "^0.1.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -25,17 +25,20 @@
     "@tiptap/react": "^3.0.3",
     "@tiptap/starter-kit": "^3.0.3",
     "@types/pdfkit": "^0.17.0",
+    "@types/puppeteer": "^5.4.7",
     "canvas-confetti": "^1.9.3",
+    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
-    "next": "14.1.0",
+    "next": "^14.2.30",
     "openai": "^5.9.0",
     "pdfkit": "^0.17.1",
     "phaser": "^3.90.0",
+    "puppeteer-core": "^10.4.0",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -54,6 +57,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
