--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
@@ -30,13 +32,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.30",
     "openai": "^5.9.0",
     "pdfkit": "^0.17.1",
     "phaser": "^3.90.0",
+    "pixi.js": "^8.11.0",
     "puppeteer-core": "^10.4.0",
     "react": "^18",
     "react-dnd": "^16.0.1",
@@ -46,7 +51,8 @@
     "reading-time": "^1.5.0",
     "recharts": "^3.1.0",
     "stripe": "^14.15.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@types/node": "^20",
