--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@react-three/drei": "^10.5.1",
-    "@react-three/fiber": "^9.2.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
@@ -51,8 +49,7 @@
     "reading-time": "^1.5.0",
     "recharts": "^3.1.0",
     "stripe": "^14.15.0",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.178.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
