--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
+    "generate-audio": "tsx scripts/generateAudio.ts",
+    "generate-audio:test": "tsx scripts/generateAudio.ts --test",
+    "generate-audio:dry-run": "tsx scripts/generateAudio.ts --dry-run",
+    "manage-audio": "tsx scripts/manageAudio.ts",
+    "test-audio-quality": "tsx scripts/testAudioQuality.ts",
+    "test-polly-credentials": "tsx scripts/testPollyCredentials.ts",
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.848.0",
+    "@google-cloud/text-to-speech": "^6.2.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -31,6 +39,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
@@ -66,6 +75,7 @@
     "ignore-loader": "^0.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.20.3",
     "typescript": "^5",
     "vitest": "^1.2.2"
   }
