--- a/package.json
+++ b/package.json
@@ -42,15 +42,19 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^6.1.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
+    "iconv-lite": "^0.6.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.30",
+    "node-fetch": "^3.3.2",
     "openai": "^5.9.0",
     "pdfkit": "^0.17.1",
     "phaser": "^3.90.0",
