--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pixi.js": "^8.11.0",
     "puppeteer-core": "^10.4.0",
     "react": "^18",
+    "react-country-flag": "^3.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
