--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
@@ -87,6 +87,7 @@
     "recharts": "^3.1.0",
     "stripe": "^14.15.0",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
