--- a/package.json
+++ b/package.json
@@ -84,9 +84,10 @@
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
+    "html2canvas": "^1.4.1",
     "iconv-lite": "^0.6.3",
     "jsonrepair": "^3.13.0",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
