--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,35 @@
 {
+  "deno.enablePaths": [
+    "supabase/functions"
+  ],
+  "deno.lint": true,
+  "deno.unstable": [
+    "bare-node-builtins",
+    "byonm",
+    "sloppy-imports",
+    "unsafe-proto",
+    "webgpu",
+    "broadcast-channel",
+    "worker-options",
+    "cron",
+    "kv",
+    "ffi",
+    "fs",
+    "http",
+    "net"
+  ],
+  "mcpServers": {
+    "supabase": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "@supabase/mcp-server-supabase@latest",
+        "--read-only",
+        "--project-ref=xetsvpfunazwkontdpdh"
+      ],
+      "env": {
+        "SUPABASE_ACCESS_TOKEN": "sbp_7d41008ca60c4c5f1aec66db2c4b7791a5549e90"
+      }
+    }
+  }
 }
