--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "csv-parser": "^3.2.0",
     "csv-stringify": "^6.6.0",
     "dotenv": "^17.2.1",
+    "flag-icons": "^7.5.0",
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
@@ -100,7 +101,6 @@
     "puppeteer": "^24.19.0",
     "puppeteer-core": "^10.4.0",
     "react": "^18",
-    "react-country-flag": "^3.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
