--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "ignore-loader": "^0.1.2",
     "jsdom": "^26.1.0",
     "postcss": "^8",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.20.3",
     "typescript": "^5",
