--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/ssr": "^0.6.1",
