--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "benchmark": "node scripts/performance-benchmark.js",
     "benchmark:load": "node scripts/performance-benchmark.js --concurrent=50 --duration=120",
     "import-grammar-content": "tsx src/scripts/import-grammar-content.ts"
+,
+    "type-check:progressive": "tsc --project tsconfig.progressive.json --noEmit"
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.848.0",
@@ -59,6 +61,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@sentry/nextjs": "^10.17.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.58.0",
