--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "populate-aqa-writing-assessments": "tsx scripts/populate-aqa-writing-assessments.ts",
     "populate-sentences": "tsx scripts/populate-sentences.ts",
     "populate-word-restore": "tsx scripts/populate-word-restore-sentences.ts",
+  "backfill-vocabulary-gems": "tsx scripts/backfill-vocabulary-gems.ts",
     "console-ninja:setup": "node scripts/console-ninja-integration-demo.js --setup",
     "console-ninja:monitor": "node scripts/console-ninja-realtime-monitor.js --monitor",
     "console-ninja:test": "node scripts/console-ninja-realtime-monitor.js --test",
