Fix: Reduce serverless function bundle size for worksheet generation
- Add output file tracing to exclude heavy dependencies (Puppeteer, AWS SDK, etc.)
- Externalize Puppeteer in webpack config to prevent bundling
- Lazy load OpenAI SDK in vocabulary-practice generator
- Add runtime configuration for worksheet HTML generation route
- Configure Vercel function settings with appropriate memory and timeout
- Expected to reduce bundle from 433MB to ~100-150MB

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,12 @@
   "devCommand": "next dev",
   "installCommand": "npm install",
   "framework": "nextjs",
+  "functions": {
+    "api/worksheets/generate-html.func/**": {
+      "maxDuration": 60,
+      "memory": 3008
+    }
+  },
   "crons": [
     {
       "path": "/api/blog/publish-scheduled",
