--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "functions": {
-    "api/worksheets/generate-html.func/**": {
+    "api/worksheets/generate-html": {
       "maxDuration": 60,
       "memory": 1024
     }
