--- a/package.json
+++ b/package.json
@@ -67,10 +67,20 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@tiptap/extension-image": "^3.0.3",
-    "@tiptap/extension-text-align": "^3.0.3",
-    "@tiptap/react": "^3.0.3",
-    "@tiptap/starter-kit": "^3.0.3",
+    "@tiptap/extension-color": "^3.10.4",
+    "@tiptap/extension-heading": "^3.10.4",
+    "@tiptap/extension-highlight": "^3.10.4",
+    "@tiptap/extension-image": "^3.10.4",
+    "@tiptap/extension-link": "^3.10.4",
+    "@tiptap/extension-table": "^3.10.4",
+    "@tiptap/extension-table-cell": "^3.10.4",
+    "@tiptap/extension-table-header": "^3.10.4",
+    "@tiptap/extension-table-row": "^3.10.4",
+    "@tiptap/extension-text-align": "^3.10.4",
+    "@tiptap/extension-text-style": "^3.10.4",
+    "@tiptap/extension-underline": "^3.10.4",
+    "@tiptap/react": "^3.10.4",
+    "@tiptap/starter-kit": "^3.10.4",
     "@types/aws-sdk": "^0.0.42",
     "@types/howler": "^2.2.12",
     "@types/pdfkit": "^0.17.0",
