--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "path": "/api/blog/publish-scheduled",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/expire-trials",
+      "schedule": "0 2 * * *"
     }
   ],
   "headers": [
