--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@tiptap/starter-kit": "^3.10.4",
     "@types/aws-sdk": "^0.0.42",
     "@types/howler": "^2.2.12",
+    "@types/lz-string": "^1.3.34",
     "@types/pdfkit": "^0.17.0",
     "@types/puppeteer": "^5.4.7",
     "@types/react-window": "^1.8.8",
@@ -111,6 +112,7 @@
     "jspdf-autotable": "^5.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
+    "lz-string": "^1.5.0",
     "next": "^14.2.30",
     "node-fetch": "^3.3.2",
     "openai": "^5.23.1",
