--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "csv-stringify": "^6.6.0",
     "docx": "^9.5.1",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "flag-icons": "^7.5.0",
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
