--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
