--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "dev:lan": "next dev -H 0.0.0.0",
+    "ios:dev": "CAP_MODE=dev npx cap run ios",
+    "ios:prod": "CAP_MODE=prod npx cap run ios",
+    "android:dev": "CAP_MODE=dev npx cap run android",
+    "android:prod": "CAP_MODE=prod npx cap run android",
+    "cap:sync": "npx cap sync",
+    "cap:copy": "npx cap copy",
     "build": "next build",
     "build:clean": "rm -rf .next/cache && next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "clean-cache": "rm -rf .next/cache && echo '✅ Build cache cleared'",
@@ -51,10 +59,7 @@
     "benchmark": "node scripts/performance-benchmark.js",
     "benchmark:load": "node scripts/performance-benchmark.js --concurrent=50 --duration=120",
     "import-grammar-content": "tsx src/scripts/import-grammar-content.ts",
-    "type-check:progressive": "tsc --project tsconfig.progressive.json --noEmit",
-    "cap:sync": "npx cap sync",
-    "cap:ios": "npx cap open ios",
-    "cap:android": "npx cap open android"
+    "type-check:progressive": "tsc --project tsconfig.progressive.json --noEmit"
   },
   "dependencies": {
     "@ai-sdk/groq": "^3.0.4",
@@ -79,7 +84,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@sentry/nextjs": "^10.17.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.58.0",
